--- a/Backward_Royal.uproject
+++ b/Backward_Royal.uproject
@@ -5,7 +5,7 @@
 	"Description": "",
 	"Modules": [
 		{
-			"Name": "BackwardsRoyal",
+			"Name": "Backward_Royal",
 			"Type": "Runtime",
 			"LoadingPhase": "Default",
 			"AdditionalDependencies": [
